--- a/website/index.html
+++ b/website/index.html
@@ -130,11 +130,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Syco-bench: A benchmark for LLM Sycophancy</h1>
+        <h1>Syco-bench: A Benchmark for LLM Sycophancy</h1>
         <div class="links">
-            <a href="https://arxiv.org/" target="_blank">
-                <img src="arxiv-logomark-small.svg" alt="arXiv" class="icon">arXiv
-            </a>
+            <a href="syco-bench.pdf" target="_blank">Paper</a>
             <a href="https://github.com/timfduffy/syco-bench" target="_blank">
                 <img src="github-mark.svg" alt="GitHub" class="icon">GitHub
             </a>
@@ -145,7 +143,7 @@
                 <li><b>Picking Sides:</b> How much the model sides with the user over a friend in an argument</li>
                 <li><b>Mirroring:</b> How much the model's position is affected by the position the user takes</li>
                 <li><b>Attribution Bias:</b> How much the model favors an idea attributed to the user vs someone else</li>
-                <li><b>Delusion Acceptance:</b> How much the model plays along to delusional statements rather than countering</li>
+                <li><b>Delusion Acceptance:</b> How much the model plays along with delusional statements rather than countering</li>
             </ul>
             The charts below show the results for each model tested, with and without the system prompt used in the provider's web interface. Click on a chart to see the full size version.
         </div>
